--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Georama&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: grey;
 }
 
 body {
+  font-family: 'Georama', sans-serif;
   font-size: 100%;
+  background-image: url("./background.jpg");
+  background-color: rgba (0, 0, 0, 0, 0.5);
+  color: white;
 }
 
 .time-container {
@@ -19,7 +24,6 @@ body {
 }
 
 .timer {
-  background-color: rgba (0, 0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
